--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,4 @@
 .jumbotron {
-  background-image: url("http://publicdomainarchive.com/wp-content/uploads/2014/12/public-domain-images-free-stock-photos-high-quality-resolution-downloads-public-domain-archive-11-1000x667.jpg");
-  color: rgb(255, 255, 255) !important;
-  padding: 100px 25px;
-  background-size: cover;
-}
-.container-fluid {
-  padding: 60px 50px;
+  background-color: rgb(27, 27, 31);
+  color: rgb(241, 236, 236);
 }
